--- a/src/components/QuerySettings/QuerySettings.css
+++ b/src/components/QuerySettings/QuerySettings.css
@@ -1,4 +1,4 @@
-.inputBox {
+.querySettings {
     display: flex;
     align-items: center;
     overflow-x: auto; 
@@ -7,15 +7,15 @@
     background-color: #e6e6e6;
 }
 
-.inputBox::-webkit-scrollbar {
+.querySettings::-webkit-scrollbar {
     width: 8px;
 }
 
-.inputBox::-webkit-scrollbar-thumb {
+.querySettings::-webkit-scrollbar-thumb {
     background-color: #888;
     border-radius: 4px;
 }
 
-.inputBox::-webkit-scrollbar-thumb:hover {
+.querySettings::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
